--- a/style.css
+++ b/style.css
@@ -1,3 +1,34 @@
 body {
-    background-color: white;
+    color: white;
+}
+
+
+html { 
+    background: url(city-wallpaper.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+.landingText {
+    position: absolute;
+    text-align: center;
+    top: 40%;
+    left: 20%;
+    height: 40%;
+    width: 70%;
+    
+}
+
+.myName {
+    font-size: 100px;
+}
+
+.myQuote {
+    font-size: 20px;
+}
+
+.mySlogan {
+    font-size: 25px;
 }
