--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 
 
 html { 
-    background: url(city-wallpaper.jpg) no-repeat center center fixed; 
+    background: url(/images/city-wallpaper2.jpg) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
