--- a/style.css
+++ b/style.css
@@ -1,14 +1,24 @@
-body {
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
     color: white;
 }
 
+.bgImage {
+    width: 100%;
+    height: 100%;
+    max-height: 100%;
+    margin: 0;
+    padding: 0;
+    background-image: url('/images/city-wallpaper2.jpg');
+    background-size:100% 100%;
+    background-repeat: no-repeat;
+}
 
-html { 
-    background: url(./images/city-wallpaper2.jpg) no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+nav {
+    position: fixed;
+    top: 0;
 }
 
 .landingText {
@@ -18,24 +28,29 @@ html {
     width: auto;
     top: 25%;
     bottom: 25%;
-    left: 25%;
-    right: 25%;
+    left: 5%;
+    right: 5%;
 }
 
 .myName {
     position: relative;
-    top: -30%;
     font-size: 20vmin;
+    top: -30%;
+    font-family: 'Open Sans', sans-serif;
+
 }
 
 .myQuote {
     position: relative;
     font-size: 5vmin;
     top: -55%;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .mySlogan {
     position: relative;
     font-size: 7vmin;
     top: -60%;
+    font-family: 'Open Sans', sans-serif;
 }
+/*font-family: 'Lato', sans-serif;*/
