Added templates and made more pages

--- a/templates/basicPageTemplate.html
+++ b/templates/basicPageTemplate.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>lukew3</title>
-        <link rel="stylesheet" href="/pages/projects/projects.css">
+        <link rel="stylesheet" href="/templates/basicPageCssTemplate.css">
         <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
         <link rel="shortcut icon" type="image/png" href="/images/lukew3Logo1.png"/>
     </head>
@@ -21,8 +21,8 @@
         </nav>
 
         <div class="titleContent">
-            <h1 class="title">Projects</h1>
-            <p class="description">What I've been up to</p>
+            <h1 class="title">Title</h1>
+            <p class="description">Description</p>
         </div>
         <div class="bodyContent">
                 <p>Patience is a virtue. More coming soon.</p>
