--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html, body {
     max-height: 100%;
     margin: 0;
     padding: 0;
-    background-image: url('/images/city-wallpaper2.jpg');
+    background-image: url('images/city-wallpaper2.jpg');
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
@@ -47,7 +47,10 @@ a {
 li a:hover {
     background-color: #111;
 }
-
+li img {
+    height:64px;
+    width:64px;
+}
 /*Text on the opening page*/
 .landingTextBox {
     position: absolute;
