--- a/templates/basicPageCssTemplate.css
+++ b/templates/basicPageCssTemplate.css
@@ -10,7 +10,7 @@ html, body {
     max-height: 100%;
     margin: 0;
     padding: 0;
-    background-image: url('/images/city-wallpaper2.jpg');
+    background-image: url('../images/city-wallpaper2.jpg');
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
