--- a/templates/basicPageTemplate.html
+++ b/templates/basicPageTemplate.html
@@ -5,7 +5,7 @@
         <title>lukew3</title>
         <link rel="stylesheet" href="basicPageCssTemplate.css">
         <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
-        <link rel="shortcut icon" type="image/png" href="../images/lukew3Logo1.png"/>
+        <link rel="shortcut icon" type="image/png" href="../images/defaultFavicon.png"/>
     </head>
     <body>
         <div class="bgImage">&nbsp;</div>
